--- a/guarantees/guarantees.html
+++ b/guarantees/guarantees.html
@@ -1,89 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../common/style.css" />
-    <link rel="stylesheet" href="./guarantees.css">
-    <title>Гарантии</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="../common/style.css" />
+        <link rel="stylesheet" href="./guarantees.css" />
+        <title>Гарантии</title>
+    </head>
+    <body>
+        <section class="container">
+            <ul class="breadcrumb">
+                <li><a href="index.html">Главная</a></li>
+                <li>Гарантии</li>
+            </ul>
+            <div class="guarantees__main__screen">
+                <h1 class="guarantees__h1">Почему нам стоит доверять?</h1>
 
-<section class="container">
-    <ul class="breadcrumb">
-        <li><a href="index.html">Главная</a></li>
-        <li>Гарантии</li>
-    </ul>
-    <div class="guarantees__main__screen">
-        <h1 class="guarantees__h1">Почему нам стоит доверять?</h1>
-        <div class="guarantees__grid__wrapper__main__screen">
-            <div class="guarantees__grid__wrapper__main__screen__text">
-                <img src="./img/guarantees__workers.png" alt="">
-                <div>
-                   <p>
-                       Наша компания гарантирует высокое качество нашей продукции и предоставляет гарантийный срок на все изделия. Мы гордимся своими продуктами и уверены в их надежности и долговечности. Гарантийный срок на продукцию составляет один год – это значит, что в течение этого периода мы берем на себя ответственность за качество нашей продукции и готовы заменить или отремонтировать ее в случае неисправности.
-                   </p>
-                   <p>
-                       Мы используем только качественные комплектующие от надежных производителей. На комплектующие, которые мы используем при производстве, распространяются гарантийные обязательства производителя. Гарантийный срок на комплектующие может отличаться и зависит от производителя. Мы гарантируем, что все комплектующие, которые мы используем, соответствуют высоким стандартам качества и проходят строгий контроль перед использованием.Для получения гарантийного обслуживания на комплектующие необходимо обратиться.
-                   </p>
+            <div class="guarantees__grid__wrapper">
+                <div class="guarantees__type__guarantees__block">
+                    <div class="guarantees__circle">
+                        <div></div>
+                    </div>
+                    <h1 class="guarantees__block__title">Честные гарантийные сроки на запчасти</h1>
+                    <div class="guarantees__text">
+                        Мы даём 30 дней гарантии на двигатель, КПП и редуктор и 14 дней – на остальные детали. Срок гарантии прописан в товарном чеке. На детали, отправленные в другие города, отсчет
+                        гарантийного срока начинается с даты получения заказа покупателем.
+                    </div>
+                </div>
+                <div class="guarantees__type__guarantees__block">
+                    <div class="guarantees__circle">
+                        <div></div>
+                    </div>
+                    <h1 class="guarantees__block__title">Гарантия на все виды работ.</h1>
+                    <div class="guarantees__text">На выполненные работы по ремонту и восстановлению даём 30 дней гарантии. Гарантия на покрасочные работы – 6 месяцев.</div>
+                </div>
+                <div class="guarantees__type__guarantees__block">
+                    <h1 class="guarantees__block__title">Персональные условия и документы на детали</h1>
+                    <div class="guarantees__text">
+                        Детально гарантийные условия оговариваются с персональным менеджером. Помогаем с решением всех дополнительных вопросов, связанных с восстановлением и ремонтом, в том числе
+                        юридических. Предоставляем полную документацию на все номерные агрегаты.
+                    </div>
+                </div>
+                <div class="guarantees__type__guarantees__block">
+                    <h1 class="guarantees__block__title">Привезём новые запчасти с гарантией</h1>
+                    <div class="guarantees__text">
+                        Гарантия на новые неоригинальные детали – от 3 месяцев до 1 года в зависимости от бренда и того, откуда доставлена запчасть. Гарантия на новые оригинальные детали составляет 1
+                        месяц. Привезём из Азиатского региона, так как при доставке из Европы в современных условиях гарантии нет.
+                    </div>
+                </div>
+                <div class="guarantees__type__guarantees__block">
+                    <h1 class="guarantees__block__title">Возврат</h1>
+                    <div class="guarantees__text">Если подтвердилась неисправность детали, мы заменим её на рабочую или вернём деньги. Нюансы возврата обсуждаются с менеджером.</div>
                 </div>
             </div>
-        </div>
-    </div>
-    <h1 class="guarantees__h2">Гарантия на техническое обслуживание?</h1>
-    <div class="guarantees__text guarantees__text__p">
-        Мы заботимся о наших клиентах и предоставляем гарантию на техническое обслуживание. Мы гарантируем высокое качество технического обслуживания и предоставляем гарантийный срок на все выполненные работы. Гарантийный срок на техническое обслуживание составляет 3 месяца – это значит, что мы берем на себя ответственность за качество нашей работы по техническому обслуживанию и готовы исправить любые несоответствия. Для получения гарантийного обслуживания на техническое обслуживание необходимо обратиться к нам по указанным контактам – мы всегда готовы помочь нашим клиентам.    </div>
-    <div class="guarantees__grid__wrapper">
-        <div class="guarantees__type__guarantees__block">
-            <div class="guarantees__circle">
-                <div></div>
-            </div>
-            <h1 class="guarantees__block__title">Гарантийный срок</h1>
-            <div class="guarantees__text">Мы предоставляем гарантийный <br> срок на продукцию и услуги <br> в течение 12 месяцев.  </div>
-        </div>
-        <div class="guarantees__type__guarantees__block">
-            <div class="guarantees__circle">
-                <div></div>
-            </div>
-            <h1 class="guarantees__block__title">Гарантийный срок</h1>
-            <div class="guarantees__text">Мы предоставляем гарантийный <br> срок на продукцию и услуги <br> в течение 12 месяцев.  </div>
-        </div>
-        <div class="guarantees__type__guarantees__block">
-            <div class="guarantees__circle">
-                <div></div>
-            </div>
-            <h1 class="guarantees__block__title">Гарантийный срок</h1>
-            <div class="guarantees__text">Мы предоставляем гарантийный <br> срок на продукцию и услуги <br> в течение 12 месяцев.  </div>
-        </div>
-        <div class="guarantees__type__guarantees__block">
-            <h1 class="guarantees__block__title">Гарантийный срок</h1>
-            <div class="guarantees__text">Мы предоставляем гарантийный <br> срок на продукцию и услуги <br> в течение 12 месяцев.  </div>
-        </div>
-        <div class="guarantees__type__guarantees__block">
-            <h1 class="guarantees__block__title">Гарантийный срок</h1>
-            <div class="guarantees__text">Мы предоставляем гарантийный <br> срок на продукцию и услуги <br> в течение 12 месяцев.  </div>
-        </div>
-        <div class="guarantees__type__guarantees__block">
-            <h1 class="guarantees__block__title">Гарантийный срок</h1>
-            <div class="guarantees__text">Мы предоставляем гарантийный <br> срок на продукцию и услуги <br> в течение 12 месяцев.  </div>
-        </div>
-        <div class="guarantees__type__guarantees__block">
-            <h1 class="guarantees__block__title">Гарантийный срок</h1>
-            <div class="guarantees__text">Мы предоставляем гарантийный <br> срок на продукцию и услуги <br> в течение 12 месяцев.  </div>
-        </div>
-        <div class="guarantees__type__guarantees__block">
-            <h1 class="guarantees__block__title">Гарантийный срок</h1>
-            <div class="guarantees__text">Мы предоставляем гарантийный <br> срок на продукцию и услуги <br> в течение 12 месяцев.  </div>
-        </div>
-        <div class="guarantees__type__guarantees__block">
-            <h1 class="guarantees__block__title">Гарантийный срок</h1>
-            <div class="guarantees__text">Мы предоставляем гарантийный <br> срок на продукцию и услуги <br> в течение 12 месяцев.  </div>
-        </div>
-    </div>
-</section>
+        </section>
 
-<script src="../libray/bootstrap.min.js"></script>
-</body>
+        <script src="../libray/bootstrap.min.js"></script>
+    </body>
 </html>
