--- a/mainv2/index.html
+++ b/mainv2/index.html
@@ -860,7 +860,7 @@
         <a href="tel:8-800-550-96-38">8-800-550-96-38</a>
       </div>
       <div class="m_v2__search">
-        <input type="text" placeholder="Номер детали" />
+        <input type="text" placeholder="Поиск по номеру детали" />
         <button class="m_v2__search__btn">Найти</button>
       </div>
       <div class="m_v2_categories">
