--- a/mainv2/index.html
+++ b/mainv2/index.html
@@ -833,7 +833,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="../header//script_header.js"></script>
-    <main style="margin-top: 100px" class="container">
+    <main class="container m_mv_main">
       <div class="m_v2_service">
         <a
           href="#"
